--- a/Nikki_Xamarin/Nikki_Xamarin.Android/Properties/AndroidManifest.xml
+++ b/Nikki_Xamarin/Nikki_Xamarin.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Nikki_Xamarin">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="Nikki_Xamarin.Android"></application>
+	<application android:label="Genuino101_Xamarin.Android"></application>
 
   <uses-permission android:name="android.permission.BLUETOOTH" />
   <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
